fix the "z-index" of the toggle

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -116,6 +116,7 @@ ul {
 	background-color: transparent;
 	padding: 0;
 	border: none;
+	z-index: 2;
 
 	.bar {
 		height: 3px;
